// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAttr type snapshot tests 1`] = `
<span
  className="text-muted"
>
  -
</span>
`;

exports[`TextAttr type snapshot tests 2`] = `
<span
  className="text-muted"
>
  -
</span>
`;

exports[`TextAttr type snapshot tests 3`] = `
<div>
  <div>
    TestModel 1
  </div>
</div>
`;

exports[`TextAttr type snapshot tests 4`] = `
<div>
  <div>
    default
  </div>
</div>
`;

exports[`TextAttr type snapshot tests 5`] = `
<div>
  <div>
    TestModel 1
  </div>
</div>
`;

exports[`TextAttr type snapshot tests 6`] = `
<div>
  <div>
    abc
  </div>
</div>
`;

exports[`TextAttr type snapshot tests 7`] = `
<div>
  <div>
    <small
      className="text-muted"
    >
      123
       
    </small>
    abc
  </div>
</div>
`;

exports[`TextAttr type snapshot tests 8`] = `
<div>
  <div>
    <small
      className="text-muted"
    >
      123
       
    </small>
    abc
  </div>
  <small
    className="text-muted"
  >
    some important detail
  </small>
</div>
`;

exports[`TextAttr type snapshot tests 9`] = `
<div>
  <div>
    abc
  </div>
</div>
`;

exports[`TextAttr type snapshot tests 10`] = `
<div>
  <div>
    <small
      className="text-muted"
    >
      TestModel
       
    </small>
    TestModel
  </div>
  <small
    className="text-muted"
  >
    TestModel
  </small>
</div>
`;

exports[`TextAttr type snapshot tests 11`] = `
<div>
  <div>
    <span
      className="text-muted"
    >
      -
    </span>
  </div>
</div>
`;
